# parse_hub_bot

./: .dockerignore  .env.exa  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  bot.py  docker-compose.yaml  i18n.py  log.py  platform_config.yaml.exa  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: a43d3810bad8_initial_schema.py
config/: config.py  platform_config.py
core/: __init__.py  config.py  platform_config.py  watchdog.py
data/config/: platform_config.yaml.exa
db/: __init__.py  base.py  engine.py  init.py  session.py
db/models/: __init__.py  cache.py  user_settings.py  users.py
i18n/: de-de.yaml  en-us.yaml  es-es.yaml  fr-fr.yaml  id-id.yaml  it-it.yaml  ja-jp.yaml  ko-kr.yaml  nl-nl.yaml  pl-pl.yaml  pt-br.yaml  ru-ru.yaml  th-th.yaml  tr-tr.yaml  vi-vn.yaml  zh-hans.yaml  zh-hant.yaml
methods/: __init__.py  tg_parse_hub.py
plugins/: ai_summary.py  filters.py  helpers.py  inline_parse.py  parse.py  settings.py  start.py
repo/: __init__.py  cache.py  user_settings.py  users.py
repo/user_settings/: __init__.py  migrate.py  repo.py  schema.py
repo/user_settings/migrations/: __init__.py  v1_to_v2.py  v2_to_v3.py  v3_to_v4.py  v4_to_v5.py
services/: __init__.py  account.py  cache.py  parser.py  pipeline.py
src/ParseHub/: __init__.py  main.py
src/ParseHub/config/: config.py
src/ParseHub/tools/: __init__.py  llm.py  transcriptions.py
src/ParseHub/types/: __init__.py  error.py  media.py  parse_result.py  subtitles.py  summary_result.py
src/ParseHub/utiles/: bilibili_api.py  download_file.py  img_host.py  utile.py  weibo_api.py  whisper_api.py
src/test/: parse_test.py
user_config/: __init__.py  engine.py  schema.py
user_config/migrations/: __init__.py
utiles/: converter.py  filters.py  img_host.py  optimized_event_loop.py  ph.py  utile.py  watchdog.py
utils/: converter.py  event_loop.py  file_host.py  filters.py  helpers.py  img_host.py  media_processing_unit.py  ph.py  rate_limit.py  util.py
(+10 files in other folders)
