[project]
name = "parsehubbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "apscheduler==3.10.4",
    "dynrender-skia>=0.2.5",
    "httpx>=0.28.1",
    "kurigram>=2.2.7",
    "loguru>=0.6.0,<0.7.0",
    "lxml-html-clean>=0.4.1",
    "markdown>=3.7",
    "parsehub>=1.2.17",
    "python-dotenv>=1.0.1",
    "telegraph>=2.2.0",
    "tgcrypto>=1.2.5",
]
